--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -6,7 +6,7 @@ import BackToTopButton from "./BackToTopButton.astro"
 <header class="bg-white/70 backdrop-blur dark:bg-neutral-900/70">
     <div class="container mx-auto px-6 py-1.5 flex items-center justify-between">
         <a href="/"><h1 class="text-lg font-semibold">Yuan's blog</h1></a>
-        <img class="w-10 h-10 rounded-xl border-2 border-dashed p-0.5 dark:border-neutral-800 dark:brightness-50" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
+        <img class="w-10 h-10 rounded-xl border-2 border-dashed p-0.5 dark:border-neutral-800" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
     </div>
 </header>
 
