--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 
 
 ---
 
-<BaseLayout>
+<PageLayout>
 
 	<div class="h-[2000px]"></div>
 
