--- a/src/layouts/components/FooterComponent.astro
+++ b/src/layouts/components/FooterComponent.astro
@@ -1,10 +1,10 @@
 <footer class="container mx-auto p-6">
     <div class="rounded-lg border-2 border-dashed p-5 flex flex-wrap gap-5 justify-between dark:border-neutral-800">
-        <div>
+        <div class="space-y-2.5">
             <h1 class="font-semibold font-mono">Mr.Yuan's blog</h1>
-            <span class="text-xs font-bold rounded-lg border-2 border-dashed border-blue-200 bg-blue-50 px-1.5 py-0.5 dark:bg-blue-50/10 dark:border-blue-200/50">🌟StarMap</span>
+            <span class="inline-block text-xs font-bold rounded-lg border-2 border-dashed border-blue-200 bg-blue-50 px-2 py-1 dark:bg-blue-50/10 dark:border-blue-200/50">✨ StarMap</span>
         </div>
-        <div class="text-xs text-neutral-400 font-light dark:text-neutral-600">
+        <div class="space-y-1 text-xs text-neutral-500 font-light dark:text-neutral-600">
             <p>内容均采用 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank" class="underline decoration-dotted underline-offset-2 inline-flex items-center">CC BY-NC-SA 4.0<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-1 h-4 w-4 flex-shrink-0 opacity-50"><path d="M7 7h10v10"></path><path d="M7 17 17 7"></path></svg></a> 国际许可协议，转载请保留原文链接及署名。</p>
             <p class="flex items-center gap-0.5 font-mono">Powered By Astro · Designed By Mr.Yuan <span class="ml-2 transition hover:-rotate-[15deg]"><img src="/favicon.svg"></span></p>
         </div>
