--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -8,6 +8,7 @@ const { frontmatter  } = Astro.props;
 
 <BaseLayout >
     <HeaderComponent />
+    
     <main class="container mx-auto px-6 pt-8 pb-2">
         <h1 class="text-xl font-semibold mb-2">{frontmatter.title}</h1>
         <section class="flex flex-wrap gap-5 items-center mb-8 text-xs font-light text-neutral-400">
@@ -63,7 +64,7 @@ const { frontmatter  } = Astro.props;
         }
 
         #post_content :not(pre)>code, #post_content kbd {
-            @apply rounded px-1 text-sm font-light shadow-sm border border-neutral-200 bg-neutral-50 text-neutral-500 dark:bg-neutral-800/50 dark:border-neutral-800;
+            @apply rounded-md px-1.5 py-0.5 text-sm font-light border border-neutral-200 bg-neutral-50 text-neutral-500 dark:bg-neutral-800/50 dark:border-neutral-800;
         }
 
         #post_content kbd {
