--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -13,7 +13,7 @@ import BackToTopButton from "./BackToTopButton.astro"
 <!-- 导航链接和按钮 -->
 <section class="sticky top-0 bg-white/70 backdrop-blur border-b-2 border-dashed dark:bg-neutral-900/70 dark:border-neutral-800">
     <div class="container mx-auto px-6 py-2 flex gap-5 flex-nowrap items-center justify-between">
-        <nav class="flex flex-wrap gap-2.5 text-sm">
+        <nav class="flex flex-wrap gap-2.5 text-xs text-neutral-600 dark:text-neutral-400">
             <a class="transition active:scale-95" href="#">🏠 主页</a>
             <a class="transition active:scale-95" href="#">🎨 友链</a>
             <a class="transition active:scale-95" href="#">😎 关于</a>
