--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,12 +11,12 @@ const { frontmatter  } = Astro.props;
     
     <main class="container mx-auto px-6 pt-8 pb-2">
         <h1 class="text-xl font-semibold mb-2">{frontmatter.title}</h1>
-        <section class="flex flex-wrap gap-5 items-center mb-8 text-xs font-light text-neutral-400">
+        <section class="flex flex-wrap gap-5 items-center mb-8 text-xs font-light text-neutral-400 dark:text-neutral-600">
             <div class="flex items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3.5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
                 </svg>
-                <span class="border-b-2 border-dashed">{frontmatter.date.toString().slice(0,10)}</span>
+                <span class="underline underline-offset-4 decoration-dashed">{frontmatter.date.toString().slice(0,10)}</span>
             </div>
         </section>
         <article id="post_content" class="text-base align-middle">
