--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -5,7 +5,7 @@ import BackToTopButton from "./BackToTopButton.astro"
 <!-- 网站标题和头像 -->
 <header class="bg-white/70 backdrop-blur dark:bg-neutral-900/70">
     <div class="container mx-auto px-6 py-1.5 flex items-center justify-between">
-        <a href="/"><h1 class="text-lg font-semibold">Yuan's blog</h1></a>
+        <a href="/"><h1 class="text-lg font-bold">Yuan's blog</h1></a>
         <img class="w-10 h-10 rounded-xl border-2 border-dashed p-0.5 dark:border-neutral-800" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
     </div>
 </header>
@@ -13,7 +13,7 @@ import BackToTopButton from "./BackToTopButton.astro"
 <!-- 导航链接和按钮 -->
 <section class="sticky top-0 bg-white/70 backdrop-blur border-b-2 border-dashed dark:bg-neutral-900/70 dark:border-neutral-800">
     <div class="container mx-auto px-6 py-2 flex gap-5 flex-nowrap items-center justify-between">
-        <nav class="flex flex-wrap gap-2.5 text-xs text-neutral-600 dark:text-neutral-400">
+        <nav class="flex flex-wrap gap-2.5 text-sm">
             <a class="transition active:scale-95" href="#">🏠 主页</a>
             <a class="transition active:scale-95" href="#">🎨 友链</a>
             <a class="transition active:scale-95" href="#">😎 关于</a>
