--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -19,7 +19,7 @@ const { frontmatter  } = Astro.props;
                 <span class="border-b border-dashed border-neutral-400/70 dark:border-neutral-600">{frontmatter.date.toString().slice(0,10)}</span>
             </div>
         </section>
-        <article id="post_content" class="text-base align-middle tracking-wide leading-relaxed">
+        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed">
             <slot />
         </article>
     </main>
