--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,7 +10,7 @@ const { frontmatter  } = Astro.props;
     <HeaderComponent />
     
     <main class="container mx-auto px-6 pt-8 pb-2">
-        <h1 class="text-2xl my-0 leading-none text-neutral-950 dark:text-neutral-400">{frontmatter.title}</h1>
+        <h1 class="text-2xl my-0 leading-none">{frontmatter.title}</h1>
         <section class="flex flex-wrap gap-5 items-center my-6 text-xs font-light text-neutral-400 dark:text-neutral-600">
             <div class="flex items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
@@ -25,12 +25,12 @@ const { frontmatter  } = Astro.props;
     </main>
 
     <section class="bg-neutral-50 dark:bg-neutral-800/30">
-        <div class="container mx-auto px-6 py-4 flex items-center text-sm font-thin leading-relaxed text-neutral-400/70 dark:text-neutral-600">
-            <div >
+        <div class="container mx-auto px-6 py-4 flex items-center text-xs font-thin leading-relaxed lg:text-sm text-neutral-400/70 dark:text-neutral-600">
+            <div class="text-end">
                 <p>本文链接：</p>
                 <p>发布时间：</p>
                 <p>作者：</p>
-                <p>版权:</p>
+                <p>版权：</p>
             </div>
             <div >
                 <p>{Astro.url}</p>
@@ -73,7 +73,7 @@ const { frontmatter  } = Astro.props;
     @layer base {
 
         #post_content h1, #post_content h2, #post_content h3, #post_content h4, #post_content h5, #post_content h6 {
-            @apply text-neutral-950 dark:text-neutral-400;
+           
         }
         #post_content h1 { @apply text-2xl; }
         #post_content h2 { @apply text-xl;  }
@@ -91,6 +91,10 @@ const { frontmatter  } = Astro.props;
         #post_content h6,
         #post_content hr {
             @apply my-5;
+        }
+
+        #post_content hr {
+            @apply border-neutral-800;
         }
 
         #post_content img {
