--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const { PageName,PageTitle } = Astro.props;
 		<meta name="description" content="袁某人的个人博客，记录生活和开发笔记" />
 		<title>{PageTitle && PageTitle+" - "} 袁某人博客</title>
 	</head>
-	<body ontouchstart="ontouchstart" class="h-full w-full antialiased scroll-smooth text-neutral-800 lg:subpixel-antialiased dark:bg-neutral-900 dark:text-neutral-400">
+	<body ontouchstart="ontouchstart" class="h-full w-full antialiased scroll-smooth bg-white text-neutral-700 lg:subpixel-antialiased dark:bg-neutral-900 dark:text-neutral-500">
 
         <slot />
 		
