--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -19,24 +19,22 @@ const { frontmatter  } = Astro.props;
                 <span class="border-b border-dashed border-neutral-400/70 dark:border-neutral-600">{frontmatter.date.toString().slice(0,10)}</span>
             </div>
         </section>
-        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed">
+        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify">
             <slot />
         </article>
     </main>
 
     <section class="bg-neutral-50 dark:bg-neutral-800/30">
-        <div class="container mx-auto px-6 py-4 flex items-center text-xs font-thin leading-relaxed lg:text-sm text-neutral-400/70 dark:text-neutral-600">
-            <div class="text-end">
-                <p>本文链接：</p>
-                <p>发布时间：</p>
+        <div class="container mx-auto px-6 py-4 flex items-center text-xs font-thin leading-relaxed lg:text-sm text-neutral-400 dark:text-neutral-500">
+            <div>
+                <p>链接：</p>
                 <p>作者：</p>
                 <p>版权：</p>
             </div>
-            <div >
+            <div>
                 <p>{Astro.url}</p>
-                <p>{frontmatter.date && frontmatter.date.toString().slice(0,10)}</p>
                 <p>{frontmatter.author && frontmatter.author}</p>
-                <p class="inline-block text-xs border rounded px-1 border-neutral-200 dark:border-neutral-700">{frontmatter.copy ? frontmatter.copy : '未声明'}</p>
+                <p>{frontmatter.copy ? frontmatter.copy : '未声明'}</p>
             </div>
         </div>
     </section>
@@ -73,7 +71,7 @@ const { frontmatter  } = Astro.props;
     @layer base {
 
         #post_content h1, #post_content h2, #post_content h3, #post_content h4, #post_content h5, #post_content h6 {
-           
+           @apply font-[500]
         }
         #post_content h1 { @apply text-2xl; }
         #post_content h2 { @apply text-xl;  }
@@ -93,14 +91,15 @@ const { frontmatter  } = Astro.props;
             @apply my-5;
         }
 
+        #post_content a {
+            @apply after:content-['_↗'] text-blue-600
+        }
         #post_content hr {
             @apply border-neutral-800;
         }
-
         #post_content img {
             @apply w-auto max-w-full;
         }
-
         #post_content pre {
             @apply block overflow-auto max-h-[50vh] p-3 rounded;
         }
