--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -1,25 +1,12 @@
 ---
-import BackToTopButton from "./BackToTopButton.astro"
+import HeaderAvatar from "./HeaderAvatar.astro"
+import HeaderNav from "./HeaderNav.astro"
 ---
 
 <!-- 网站标题和头像 -->
-<header class="bg-white/70 backdrop-blur-lg dark:bg-neutral-900/70">
+<header class="sticky top-0 bg-white/70 backdrop-blur-lg border-b-2 border-dashed dark:bg-neutral-900/70 dark:border-neutral-800">
     <div class="container mx-auto px-6 py-1.5 flex items-center justify-between">
-        <a href="/"><h1 class="text-lg font-bold">Yuan's blog</h1></a>
-        <img class="w-10 h-10 rounded-xl border-2 border-dashed p-0.5 dark:border-neutral-800" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
+        <HeaderNav />
+        <HeaderAvatar />
     </div>
 </header>
-
-<!-- 导航链接和按钮 -->
-<section class="sticky top-0 bg-white/70 backdrop-blur-lg border-b-2 border-dashed text-neutral-400 dark:text-neutral-600 dark:bg-neutral-900/70 dark:border-neutral-800">
-    <div class="container mx-auto px-6 py-2 flex gap-5 flex-nowrap items-center justify-between">
-        <nav class="flex flex-wrap gap-2.5 text-sm">
-            <a class="transition active:scale-95" href="#">🏠 主页</a>
-            <a class="transition active:scale-95" href="#">🎨 友链</a>
-            <a class="transition active:scale-95" href="#">😎 关于</a>
-        </nav>
-        <div>
-            <BackToTopButton />
-        </div>
-    </div>
-</section>
