--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -9,7 +9,7 @@ const { frontmatter  } = Astro.props;
 <BaseLayout >
     <HeaderComponent />
     
-    <main class="container mx-auto px-6 pt-8 pb-2">
+    <main class="container mx-auto p-6">
         <h1 class="text-2xl my-0 leading-none">{frontmatter.title}</h1>
         <section class="flex flex-wrap gap-5 items-center my-6 text-xs font-light text-neutral-400 dark:text-neutral-600">
             <div class="flex items-center gap-1">
