--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,14 @@ const allPosts = await Astro.glob('./posts/*.*');
 
 <PageLayout>
 
-	<main class="container mx-auto px-6 py-8 space-y-6">
+	<main class="container mx-auto px-6 pt-8 pb-2 space-y-6">
 
 		{allPosts.map((post) => 
-		<article>
-			<h1><a href={post.url} >{post.frontmatter.title}</a></h1>
-			<date class="text-xs text-neutral-400 dark:text-neutral-600">({post.frontmatter.date ? post.frontmatter.date.toString().slice(0,10) : '未知'})</date>
-		</article>
-	)}
+			<article>
+				<h1><a href={post.url} >{post.frontmatter.title}</a></h1>
+				<date class="text-xs text-neutral-400 dark:text-neutral-600">({post.frontmatter.date ? post.frontmatter.date.toString().slice(0,10) : '未知'})</date>
+			</article>
+		)}
 
 	</main>
 
