--- a/src/layouts/components/HeaderAvatar.astro
+++ b/src/layouts/components/HeaderAvatar.astro
@@ -1,4 +1,4 @@
-<div class="w-10 h-10 rounded-xl border-2 border-dashed p-0.5 dark:border-neutral-800">
+<div class="w-9 h-9 rounded-xl overflow-hidden border-2 border-dashed p-[1px] dark:border-neutral-800">
     <img id="avatar" class="rounded-xl" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
     <button id="back_to_top_btn" class="hidden items-center justify-center w-full h-full rounded-xl bg-neutral-200 transition active:scale-95 dark:bg-neutral-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
