--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,8 +10,8 @@ const { frontmatter  } = Astro.props;
     <HeaderComponent />
     
     <main class="container mx-auto p-6">
-        <h1 class="text-2xl my-0 leading-none">{frontmatter.title}</h1>
-        <section class="flex flex-wrap gap-5 items-center my-6 text-xs font-light text-neutral-400 dark:text-neutral-600">
+        <h1 class="text-2xl my-0 leading-normal">{frontmatter.title}</h1>
+        <section class="flex flex-wrap gap-5 items-center my-5 text-xs text-neutral-400 dark:text-neutral-600">
             <div class="flex items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
@@ -19,7 +19,7 @@ const { frontmatter  } = Astro.props;
                 <span class="border-b border-dashed border-neutral-400/70 dark:border-neutral-600">{frontmatter.date.toString().slice(0,10)}</span>
             </div>
         </section>
-        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify">
+        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify overflow-hidden break-words">
             <slot />
         </article>
     </main>
@@ -71,7 +71,7 @@ const { frontmatter  } = Astro.props;
     @layer base {
 
         #post_content h1, #post_content h2, #post_content h3, #post_content h4, #post_content h5, #post_content h6 {
-           @apply font-[500]
+           @apply font-[500] leading-normal;
         }
         #post_content h1 { @apply text-2xl; }
         #post_content h2 { @apply text-xl;  }
@@ -92,7 +92,7 @@ const { frontmatter  } = Astro.props;
         }
 
         #post_content a {
-            @apply after:content-['_↗'] text-blue-600
+            @apply after:content-['_↗'] text-blue-600 dark:text-blue-800;
         }
         #post_content hr {
             @apply border-neutral-800;
