--- a/src/components/details.astro
+++ b/src/components/details.astro
@@ -1,43 +1,14 @@
 ---
 const {title} =Astro.props;
 ---
-<details class="group rounded-lg bg-neutral-50 p-6 dark:bg-neutral-800">
+<details class="group rounded-lg bg-neutral-50 p-4 dark:bg-neutral-800">
     <summary class="flex cursor-pointer items-center justify-between gap-1.5">
-      <h2 class="font-medium">{title}</h2>
-
-      <span class="relative size-5 shrink-0">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="absolute inset-0 size-5 opacity-100 group-open:opacity-0"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="absolute inset-0 size-5 opacity-0 group-open:opacity-100"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-      </span>
+        <h2 class="font-medium">{title}</h2>
+		<span class="relative size-5 shrink-0 text-neutral-500">
+			<svg xmlns="http://www.w3.org/2000/svg" class="absolute inset-0 size-5 opacity-100 group-open:opacity-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" ><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+			<svg xmlns="http://www.w3.org/2000/svg" class="absolute inset-0 size-5 opacity-0 group-open:opacity-100" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" ><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+		</span>
     </summary>
-
     <div class="mt-4 leading-relaxed">
         <slot />
     </div>
