--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -10,7 +10,7 @@
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme="preferred_color_scheme"
+        data-theme="http://localhost:4321/style/giscus.css"
         data-lang="zh-CN"
         data-loading="lazy"
         crossorigin="anonymous"
