--- a/public/style/giscus.css
+++ b/public/style/giscus.css
@@ -146,7 +146,7 @@ main .gsc-loading-image {
         --color-prettylights-syntax-sublimelinter-gutter-mark: #484f58;
         --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
         --color-btn-text: #c9d1d9;
-        --color-btn-bg: #21262d;
+        --color-btn-bg: #262626;
         --color-btn-border: #f0f6fc1a;
         --color-btn-shadow: 0 0 #0000;
         --color-btn-inset-shadow: 0 0 #0000;
@@ -174,16 +174,16 @@ main .gsc-loading-image {
         --color-fg-default: #e6edf3;
         --color-fg-muted: #7d8590;
         --color-fg-subtle: #6e7681;
-        --color-canvas-default: #0d1117;
+        --color-canvas-default: inset;
         --color-canvas-overlay: #161b22;
-        --color-canvas-inset: #010409;
-        --color-canvas-subtle: #161b22;
+        --color-canvas-inset: #262626;
+        --color-canvas-subtle: inset;
         --color-border-default: #30363d;
         --color-border-muted: #21262d;
         --color-neutral-muted: #6e768166;
-        --color-accent-fg: #2f81f7;
+        --color-accent-fg: #555;
         --color-accent-emphasis: #1f6feb;
-        --color-accent-muted: #388bfd66;
+        --color-accent-muted: var(--color-border-default);
         --color-accent-subtle: #388bfd1a;
         --color-success-fg: #3fb950;
         --color-attention-fg: #d29922;
@@ -250,4 +250,8 @@ main .gsc-reactions>div {
 
 main .gsc-reactions .gsc-reactions-count {
     display: none !important;
+}
+
+main .gsc-left-header>em {
+    display: none;
 }
