--- a/public/style/giscus.css
+++ b/public/style/giscus.css
@@ -43,7 +43,7 @@ main {
     --color-prettylights-syntax-brackethighlighter-angle: #57606a;
     --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f;
     --color-prettylights-syntax-constant-other-reference-link: #0a3069;
-    --color-btn-text: #24292f;
+    --color-btn-text: #737373;
     --color-btn-bg: #f6f8fa;
     --color-btn-border: #1f232826;
     --color-btn-shadow: 0 1px 0 #1f23280a;
@@ -66,10 +66,10 @@ main {
     --color-btn-primary-disabled-bg: #94d3a2;
     --color-btn-primary-disabled-border: #1f232826;
     --color-action-list-item-default-hover-bg: #d0d7de52;
-    --color-segmented-control-bg: #eaeef2;
+    --color-segmented-control-bg: #f6f8fa;
     --color-segmented-control-button-bg: #fff;
     --color-segmented-control-button-selected-border: #8c959f;
-    --color-fg-default: #1f2328;
+    --color-fg-default: #262626;
     --color-fg-muted: #656d76;
     --color-fg-subtle: #6e7781;
     --color-canvas-default: #fff;
@@ -79,9 +79,9 @@ main {
     --color-border-default: #d0d7de;
     --color-border-muted: #d8dee4;
     --color-neutral-muted: #afb8c133;
-    --color-accent-fg: #0969da;
+    --color-accent-fg: rgba(0, 0, 0, .75);
     --color-accent-emphasis: #0969da;
-    --color-accent-muted: #54aeff66;
+    --color-accent-muted: var(--color-border-default);
     --color-accent-subtle: #ddf4ff;
     --color-success-fg: #1a7f37;
     --color-attention-fg: #9a6700;
@@ -168,8 +168,8 @@ main .gsc-loading-image {
         --color-btn-primary-disabled-bg: #23863699;
         --color-btn-primary-disabled-border: #f0f6fc1a;
         --color-action-list-item-default-hover-bg: #b1bac41f;
-        --color-segmented-control-bg: #6e76811a;
-        --color-segmented-control-button-bg: #0d1117;
+        --color-segmented-control-bg: #262626;
+        --color-segmented-control-button-bg: #171717;
         --color-segmented-control-button-selected-border: #6e7681;
         --color-fg-default: #e6edf3;
         --color-fg-muted: #7d8590;
@@ -254,4 +254,20 @@ main .gsc-reactions .gsc-reactions-count {
 
 main .gsc-left-header>em {
     display: none;
+}
+
+main .gsc-right-header {
+    padding: 2px;
+}
+
+main .gsc-right-header li {
+    border: none;
+}
+
+main .input-contrast:focus {
+    background-color: var(--color-canvas-inset);
+}
+
+main .gsc-upvote-button:disabled {
+    color: var(--color-accent-muted);
 }
