--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -2,7 +2,7 @@
 import PageLayout from "../../layouts/PageLayout.astro";
 import Friend from "../../components/Friend.astro";
 import Details from "../../components/Details.astro";
-import links from "./links.json";
+import links from "./_links.json";
 import Comment from "../../components/Comment.astro";
 ---
 
