--- a/src/components/DetailsComponent.astro
+++ b/src/components/DetailsComponent.astro
@@ -13,3 +13,9 @@ const {title} =Astro.props;
         <slot />
     </div>
 </details>
+
+<style is:global>
+    details>summary::marker {
+        display: none;
+    }
+</style>
