--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -13,7 +13,7 @@ const styleURL = new URL('/style/giscus.css', Astro.url);
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme= {styleURL}
+        data-theme= "https://jb18.cm/style/giscus.css"
         data-lang="zh-CN"
         data-loading="lazy"
         crossorigin="anonymous"
