--- a/src/components/DetailsComponent.astro
+++ b/src/components/DetailsComponent.astro
@@ -1,7 +1,7 @@
 ---
 const {title} =Astro.props;
 ---
-<details class="group rounded-lg bg-neutral-50 p-4 dark:bg-neutral-800">
+<details class="group rounded-lg bg-neutral-50 p-4 dark:bg-neutral-800 [&_summary::-webkit-details-marker]:hidden">
     <summary class="flex cursor-pointer items-center justify-between gap-1.5">
         <h2 class="font-medium">{title}</h2>
 		<span class="relative size-5 shrink-0 text-neutral-500">
