--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,7 +11,7 @@ const { frontmatter } = Astro.props;
     <HeaderComponent />
     
     <main class="container mx-auto px-6 py-2">
-        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify overflow-hidden break-words">
+        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify overflow-hidden">
             <h1 class="text-2xl my-0 leading-normal">{frontmatter.title}</h1>
             <section class="flex flex-wrap gap-5 items-center my-5 text-xs text-neutral-400 dark:text-neutral-600">
                 <div class="flex items-center gap-1">
