--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,5 +1,6 @@
 ---
 const styleURL = new URL('/style/giscus.css', Astro.url);
+console.log(styleURL.href);
 ---
 
 <div class="giscus"></div>
@@ -14,7 +15,7 @@ const styleURL = new URL('/style/giscus.css', Astro.url);
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="top"
-        data-theme= "https://jb18.cm/style/giscus.css"
+        data-theme= {styleURL.href}
         data-lang="zh-CN"
         data-loading="lazy"
         crossorigin="anonymous"
