--- a/public/style/giscus.css
+++ b/public/style/giscus.css
@@ -294,7 +294,7 @@ main .gsc-reply-author>div>span {
    
 }
 
-main .gsc-comment-content, main .gsc-reply-content {
-    font-size: 1rem;
+main .gsc-comment {
+    font-size: 1rem !important;
 }
 
