--- a/src/pages/about/about.astro
+++ b/src/pages/about/about.astro
@@ -6,7 +6,7 @@ import PageLayout from "../../layouts/PageLayout.astro";
 
 <PageLayout PageTitle="关于">
     <main class="container mx-auto p-6">
-        <article id="post_content">
+        <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify overflow-hidden">
             <slot />
         </article>
     </main>
