--- a/src/pages/about/about.astro
+++ b/src/pages/about/about.astro
@@ -1,4 +1,5 @@
 ---
+import Comment from "../../components/Comment.astro";
 import PageLayout from "../../layouts/PageLayout.astro";
 
 
@@ -9,5 +10,8 @@ import PageLayout from "../../layouts/PageLayout.astro";
         <article id="post_content" class="text-base align-middle tracking-wider leading-relaxed text-justify overflow-hidden">
             <slot />
         </article>
+        <section class="mt-6">
+            <Comment />
+        </section>
     </main>
 </PageLayout>
