--- a/public/style/giscus.css
+++ b/public/style/giscus.css
@@ -244,7 +244,7 @@ main .gsc-comment-box-write>div {
 }
 
 main .gsc-reactions>div {
-    margin-top: 2rem !important;
+    margin-top: 0 !important;
 }
 
 main .gsc-reactions .gsc-reactions-count {
