更新 BaseLayout.astro

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -48,6 +48,6 @@ const { PageName,PageTitle } = Astro.props;
 	}
 
 	body {
-		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
+		font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
 	}
 </style>
