--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -48,6 +48,7 @@ const { PageName,PageTitle } = Astro.props;
 	}
 
 	body {
-		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
+		/* font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; */
+		font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 	}
 </style>
