--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -26,7 +26,7 @@ const { frontmatter } = Astro.props;
             </div>
 
 
-            <div class="prose mt-96 prose-neutral max-w-none prose-img:rounded-xl prose-a:text-blue-600 dark:prose-invert">
+            <div class="font-mono prose mt-96 prose-neutral max-w-none prose-img:rounded-xl prose-a:text-blue-600 dark:prose-invert">
                 <slot role="article" />
             </div>
 
