--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -1,8 +1,5 @@
----
-const styleURL = new URL('/style/giscus.css', Astro.url);
----
 
-<div class="giscus"></div>
+<!-- <div class="giscus"></div>
 
 <script src="https://giscus.app/client.js"
         data-repo="ymc0182/myblog"
@@ -19,4 +16,4 @@ const styleURL = new URL('/style/giscus.css', Astro.url);
         data-loading="lazy"
         crossorigin="anonymous"
         async>
-</script>
+</script> -->
