--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -4,9 +4,7 @@ import HeaderNav from "./HeaderNav.astro"
 ---
 
 <!-- 网站标题和头像 -->
-<header class="sticky top-0 bg-white/70 backdrop-blur-lg border-b-2 border-dashed dark:bg-neutral-900/70 dark:border-neutral-800">
-    <div class="container mx-auto px-6 py-1.5 flex items-center justify-between">
-        <HeaderNav />
-        <HeaderAvatar />
-    </div>
+<header class="sticky top-0 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between">
+    <HeaderNav />
+    <HeaderAvatar />
 </header>
