--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,7 +32,7 @@ const { PageName,PageTitle } = Astro.props;
 	window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
 </script>
 
-<!-- <style>
+<style>
 	@font-face {
 		font-family: 'zql';
 		src: url('../assets/fonts/zql.woff2') format('woff2'),
@@ -49,4 +49,4 @@ const { PageName,PageTitle } = Astro.props;
 	body {
 		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
 	}
-</style> -->
+</style>
