--- a/src/layouts/components/HeaderAvatar.astro
+++ b/src/layouts/components/HeaderAvatar.astro
@@ -1,5 +1,5 @@
-<div class="w-9 h-9 rounded-xl overflow-hidden border-2 border-dashed p-[1px] dark:border-neutral-800">
-    <img id="avatar" class="rounded-xl" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
+<div class="w-8 h-8 rounded-xl overflow-hidden">
+    <img loading="lazy" id="avatar" class="rounded-xl" src="https://cravatar.com/avatar/5FBB13B635295D1226A17B782951C309?s=400&amp;f=mp">
     <button id="back_to_top_btn" class="hidden items-center justify-center w-full h-full rounded-xl bg-neutral-200 transition active:scale-95 dark:bg-neutral-800">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
