--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "./BaseLayout.astro"
 import HeaderComponent from "./components/HeaderComponent.astro";
+import PostHeaderComponent from "./components/PostHeaderComponent.astro";
 import FooterComponent from "./components/FooterComponent.astro";
 import { formatDate } from "../utils/formatDate";
 
@@ -8,7 +9,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout PageTitle={frontmatter.title}>
-    <HeaderComponent />
+    <PostHeaderComponent />
     
     <main class="container mx-auto p-8">
         <article class="prose prose-neutral max-w-none prose-img:rounded-xl prose-a:text-blue-500 dark:prose-invert">
