--- a/src/layouts/components/NavLinks.astro
+++ b/src/layouts/components/NavLinks.astro
@@ -1,11 +1,12 @@
 ---
 const links = {
-    首页 : '/',
+    进行时 : '/now',
     友链 : '/links',
     关于 : '/about'
 };
 ---
 
+<!-- 导航链接 -->
 <nav class="flex flex-wrap gap-2.5">
     {Object.entries(links).map(([name, path]) => 
         <a class="transition active:scale-95" href={path}>{name}</a>
