--- a/src/layouts/components/HeaderComponent.astro
+++ b/src/layouts/components/HeaderComponent.astro
@@ -1,10 +1,9 @@
 ---
 import HeaderAvatar from "./HeaderAvatar.astro"
-import HeaderNav from "./HeaderNav.astro"
 ---
 
 <!-- 网站标题和头像 -->
 <header class="sticky top-0 bg-white/70 backdrop-blur-lg container mx-auto px-8 py-2 flex items-center justify-between dark:bg-neutral-900/70">
-    <HeaderNav />
+     <h1><a href="/">袁某博客</a></h1>
     <HeaderAvatar />
 </header>
