--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,18 @@
 ---
 import PageLayout from "../layouts/PageLayout.astro";
+import { formatDate } from "../utils/formatDate";
 
 const allPosts = await Astro.glob('./posts/*.*');
 ---
 
 <PageLayout>
 
-	<main class="container mx-auto p-6 pb-2 space-y-6">
+	<main class="container mx-auto p-8 space-y-6">
 
 		{allPosts.map((post) => 
 			<article>
 				<h1 class="tracking-wider leading-relaxed"><a href={post.url} >{post.frontmatter.title}</a></h1>
-				<date class="text-xs text-neutral-400 dark:text-neutral-600">({post.frontmatter.date ? post.frontmatter.date.toString().slice(0,10) : '未知'})</date>
+				<date class="text-xs text-neutral-400 dark:text-neutral-600">{formatDate(post.frontmatter.date)}</date>
 			</article>
 		)}
 
