--- a/src/components/DetailsComponent.astro
+++ b/src/components/DetailsComponent.astro
@@ -9,7 +9,7 @@ const {title} =Astro.props;
 			<svg xmlns="http://www.w3.org/2000/svg" class="absolute inset-0 size-5 opacity-0 group-open:opacity-100" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" ><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
 		</span>
     </summary>
-    <div class="mt-4 leading-relaxed">
+    <div class="mt-4 leading-relaxed prose prose-neutral prose-invert">
         <slot />
     </div>
 </details>
