--- a/src/layouts/components/PostHeaderComponent.astro
+++ b/src/layouts/components/PostHeaderComponent.astro
@@ -1,4 +1,4 @@
-<header class="sticky top-2 container mx-auto px-8 pt-6 flex items-center gap-2">
+<header class="sticky top-2 container mx-auto px-8 mt-8 flex items-center gap-2">
     <button id="postGoBackButton" class="text-sm rounded-full px-3.5 py-1 bg-neutral-300/30 backdrop-blur flex items-center gap-1 dark:bg-neutral-700/30">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-3"><path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" /></svg> 
         返回
