--- a/src/components/DetailsComponent.astro
+++ b/src/components/DetailsComponent.astro
@@ -1,7 +1,9 @@
 ---
+import MarkdownLayout from "../layouts/MarkdownLayout.astro";
+
 const {title} =Astro.props;
 ---
-<details class="group rounded-lg bg-neutral-50 p-4 dark:bg-neutral-800 [&_summary::-webkit-details-marker]:hidden">
+<details class="group rounded-lg space-y-4 bg-neutral-50 p-4 dark:bg-neutral-800 [&_summary::-webkit-details-marker]:hidden">
     <summary class="flex cursor-pointer items-center justify-between gap-1.5">
         <h2 class="font-medium">{title}</h2>
 		<span class="relative size-5 shrink-0 text-neutral-500">
@@ -9,9 +11,9 @@ const {title} =Astro.props;
 			<svg xmlns="http://www.w3.org/2000/svg" class="absolute inset-0 size-5 opacity-0 group-open:opacity-100" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" ><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
 		</span>
     </summary>
-    <div class="mt-4 leading-relaxed prose prose-neutral prose-invert">
+    <MarkdownLayout>
         <slot />
-    </div>
+    </MarkdownLayout>
 </details>
 
 <style is:global>
