--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from "./BaseLayout.astro"
-import HeaderComponent from "./components/HeaderComponent.astro";
 import PostHeaderComponent from "./components/PostHeaderComponent.astro";
 import FooterComponent from "./components/FooterComponent.astro";
+import MarkdownLayout from "./MarkdownLayout.astro";
 import { formatDate } from "../utils/formatDate";
 
 const { frontmatter } = Astro.props;
@@ -12,11 +12,13 @@ const { frontmatter } = Astro.props;
     <PostHeaderComponent />
     
     <main class="container mx-auto p-8">
-        <article class="prose prose-neutral max-w-none prose-img:rounded-xl prose-a:text-blue-500 dark:prose-invert">
-            <h1 class="mb-0">{frontmatter.title}</h1>
-            <p><time>{formatDate(frontmatter.date)}</time></p>
-            <slot />
-        </article>
+        <MarkdownLayout>
+            <article>
+                {frontmatter.title && <h1 class="mb-0">{frontmatter.title}</h1>}
+                {frontmatter.date && <p><time>{formatDate(frontmatter.date)}</time></p>}
+                <slot />
+            </article>
+        </MarkdownLayout>
     </main>
     
     <FooterComponent />
