--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,6 @@
 ---
-const { PageName,PageTitle } = Astro.props;
+const { PageTitle } = Astro.props;
 ---
-
 <html lang="zh">
 	<head>
 		<meta charset="utf-8" />
@@ -48,3 +47,5 @@ const { PageName,PageTitle } = Astro.props;
 		font-family: "zql" ,"Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif; 
 	}
 </style>
+
+<script ></script>
